--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
+    "react-google-charts": "^3.0.15",
     "react-scripts": "3.2.0"
   },
   "scripts": {
